<resources>
    <string name="app_name">5_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_by_name">Filter by.name</string>
    <string name="advanced_filters">ADVANCED FILTERS</string>
    <string name="go_back">GO BACK</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="information">information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="status">Status</string>
    <string name="alive">Alive</string>
    <string name="specie">Specie</string>
    <string name="human">Human</string>
    <string name="origin">Origin</string>
    <string name="earth_c_137">Earth(C-137)</string>
    <string name="type">Type</string>
    <string name="unknown">Unknown</string>
    <string name="location">Location</string>
    <string name="earth_replacement_dimension">Earth(Replacement Dimension)</string>
</resources>