<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/tv_go_back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/go_back"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_back"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_go_back"
        app:layout_constraintStart_toStartOf="@+id/tv_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="100dp"
        android:layout_marginTop="45dp"

        >
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="146dp"
            android:layout_height="148dp"
            />
        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_rick_sanchez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rick_sanchez"
        app:layout_constraintTop_toBottomOf="@id/card_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rick_sanchez"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/tv_information"
        app:layout_constraintStart_toStartOf="@id/tv_information"
        android:layout_marginStart="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/tv_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="@id/tv_gender"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/tv_male"
        app:layout_constraintStart_toStartOf="@id/tv_male"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_alive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alive"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_states"
        app:layout_constraintStart_toStartOf="@id/tv_states"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_specie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specie"
        app:layout_constraintTop_toBottomOf="@id/tv_alive"
        app:layout_constraintStart_toStartOf="@id/tv_alive"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_specie"
        app:layout_constraintStart_toStartOf="@id/tv_specie"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        app:layout_constraintTop_toBottomOf="@id/tv_human"
        app:layout_constraintStart_toStartOf="@id/tv_human"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_erth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earth_c_137"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_origin"
        app:layout_constraintStart_toStartOf="@id/tv_origin"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/tv_erth"
        app:layout_constraintStart_toStartOf="@id/tv_erth"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toStartOf="@id/tv_type"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/tv_unknown"
        app:layout_constraintStart_toStartOf="@id/tv_unknown"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_Earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earth_replacement_dimension"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        android:layout_marginTop="5dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>